RESOLVED FIXED118936
The computed values of fix length padding should be subpixel precision like margin
https://bugs.webkit.org/show_bug.cgi?id=118936
Summary The computed values of fix length padding should be subpixel precision like m...
Ryosuke Niwa
Reported 2013-07-19 22:05:28 PDT
Extract a function to compute the zoom adjust values for paddings and margings
Attachments
Cleanup (6.57 KB, patch)
2013-07-19 22:06 PDT, Ryosuke Niwa
no flags
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 (539.80 KB, application/zip)
2013-07-19 23:55 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-02 for mac-mountainlion (545.44 KB, application/zip)
2013-07-20 02:12 PDT, Build Bot
no flags
Fixed the test (8.41 KB, patch)
2013-07-22 12:37 PDT, Ryosuke Niwa
no flags
Updated the change log (8.58 KB, patch)
2013-07-22 13:47 PDT, Ryosuke Niwa
no flags
Fixes the bug (12.29 KB, patch)
2013-07-22 17:24 PDT, Ryosuke Niwa
simon.fraser: review+
Ryosuke Niwa
Comment 1 2013-07-19 22:06:58 PDT
Build Bot
Comment 2 2013-07-19 23:55:48 PDT
Comment on attachment 207183 [details] Cleanup Attachment 207183 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/1137091 New failing tests: fast/shapes/shape-inside/shape-inside-shape-logical-top.html
Build Bot
Comment 3 2013-07-19 23:55:50 PDT
Created attachment 207191 [details] Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-12 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.3
Build Bot
Comment 4 2013-07-20 02:12:24 PDT
Comment on attachment 207183 [details] Cleanup Attachment 207183 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/1133173 New failing tests: fast/shapes/shape-inside/shape-inside-shape-logical-top.html
Build Bot
Comment 5 2013-07-20 02:12:26 PDT
Created attachment 207194 [details] Archive of layout-test-results from webkit-ews-02 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-02 Port: mac-mountainlion Platform: Mac OS X 10.8.3
Benjamin Poulain
Comment 6 2013-07-20 16:12:01 PDT
Comment on attachment 207183 [details] Cleanup I like it!
Ryosuke Niwa
Comment 7 2013-07-20 20:28:03 PDT
Actually, there is a slight behavior difference in that computed style's puddings wil now return sun pixel values instead of whole values since we no longer goes through the render tree. I don't think that's a significant change since new behavior matches that of margins but we do have to "fix" the failing test.
Benjamin Poulain
Comment 8 2013-07-21 00:04:34 PDT
Comment on attachment 207183 [details] Cleanup Oh, I thought that only a refactoring! Back to review.
Ryosuke Niwa
Comment 9 2013-07-22 12:37:30 PDT
Created attachment 207262 [details] Fixed the test
Simon Fraser (smfr)
Comment 10 2013-07-22 13:44:52 PDT
Comment on attachment 207262 [details] Fixed the test View in context: https://bugs.webkit.org/attachment.cgi?id=207262&action=review > Source/WebCore/ChangeLog:10 > + Extract a function to compute the zoom adjust values for paddings and margings > + https://bugs.webkit.org/show_bug.cgi?id=118936 > + > + Reviewed by NOBODY (OOPS!). > + > + Extracted zoomAdjustedPaddingOrMarginPixelValue and used it to compute > + the zoom adjust values for margings and paddings to reduce the code duplication. > + This needs to make it clear that there's a behavior change.
Ryosuke Niwa
Comment 11 2013-07-22 13:47:30 PDT
Created attachment 207273 [details] Updated the change log
Ryosuke Niwa
Comment 12 2013-07-22 17:24:43 PDT
Created attachment 207297 [details] Fixes the bug
Simon Fraser (smfr)
Comment 13 2013-07-23 16:31:47 PDT
Comment on attachment 207297 [details] Fixes the bug View in context: https://bugs.webkit.org/attachment.cgi?id=207297&action=review > Source/WebCore/ChangeLog:9 > + for paddings. Fixed the bug by returning the computed value when they're of fixed length. paddings -> padding
Ryosuke Niwa
Comment 14 2013-07-23 16:40:55 PDT
Note You need to log in before you can comment on or make changes to this bug.